# email-transmitter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.secrets.example  pyproject.toml
.github/workflows/: publish-to-docker-hub.yml
src/: __init__.py  config.json  email_processor.py  factories.py  factory.py  logger.py  main.py  processor.py
src/email_transmitter/: base.py  mailjet.py  ses.py
src/emailing/: __init__.py  config.py  enums.py  factory.py  mailjet.py  processor.py  ses.py
src/services/: __init__.py  base.py  enums.py  factories.py  mailjet.py  processor.py  ses.py  settings.py
src/services/config/: __init__.py
src/services/email_transmitter/: __init__.py  base.py  mailjet.py  ses.py
tests/: test_queue.py
