[tool.poetry]
name = "email-transmitter"
version = "0.1.4"
description = ""
authors = ["Jay Grieves <jaygrieves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mailjet-rest = "^1.3.4"
pydantic = "^1.10.13"
rococo = "^0.1.23"
rollbar = "^0.16.3"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
